[project]
name = "iekf-imu-example"
version = "0.1.0"
description = "GTSAM Python IEKF-style IMU/GPS state-estimation demo with 3D visualization"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "gtsam>=4.2",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.scripts]
iekf-demo = "iekf_imu.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iekf_imu"]
